2.x/ar/admin-guide/platform-settings/registration-settings.md
# إعدادات التسجيل

سياسة التسجيل الذاتي وإعادة التوجيه بعد التسجيل — ما يُطلب من المستخدمين الجدد وإلى أين يصلون.

الوصول إلى هذه الإعدادات تحت **إدارة > إعدادات التكوين > التسجيل**. تحتوي هذه الفئة على **20 إعدادًا**، مدرجة أدناه مع العنوان والتعليق المرسل في إعدادات المنصة (`SettingsCurrentFixtures.php`).

> يُعرض اسم المتغير في الكود بخط monospace. استخدمه عند البرمجة عبر [API](https://github.com/chamilo/chamilo-lms/wiki/Configurations#configsettings_overridesyaml) أو عند الحاجة إلى تغيير هذه الإعدادات على المستوى العام بتحرير [`config/settings_override.yaml`](https://github.com/chamilo/chamilo-lms/wiki/Configurations#configsettings_overridesyaml).

## الإعدادات

### `allow_double_validation_in_registration`

**التحقق المزدوج لعملية التسجيل**

يعرض ببساطة طلب تأكيد على صفحة التسجيل قبل المتابعة في إنشاء المستخدم.

*افتراضي: `false`*


### `allow_fields_inscription`

**تقييد الحقول المعروضة أثناء التسجيل**

إذا كنت تريد عرض بعض الحقول الشخصية المتاحة فقط، يمكنك إكمال المصفوفة هنا بعناصر فرعية 'fields' و'extra_fields' تحتوي على مصفوفات بقائمة الحقول المراد عرضها.

### `allow_lostpassword`

**كلمة المرور المفقودة**

هل يُسمح للمستخدمين بطلب كلمة مرورهم المفقودة؟

*افتراضي: `true`*

### `allow_registration`

**التسجيل**

هل يُسمح بالتسجيل كمستخدم جديد؟ هل يمكن للمستخدمين إنشاء حسابات جديدة؟

*افتراضي: `false`*

### `allow_registration_as_teacher`

**التسجيل كمدرس**

هل يمكن التسجيل كمدرس (مع القدرة على إنشاء الدورات)؟

*افتراضي: `false`*

### `allow_terms_conditions`

**تمكين الشروط والأحكام**

سيعرض هذا الخيار الشروط والأحكام في نموذج التسجيل للمستخدمين الجدد. يجب تهيئتها أولاً في صفحة إدارة البوابة.

*افتراضي: `false`*


### `drh_autosubscribe`

**الاشتراك التلقائي لمدير الموارد البشرية**

الاشتراك التلقائي لمدير الموارد البشرية - غير متاح بعد

### `extendedprofile_registration`

**حقول المحفظة عند التسجيل**

أي من الحقول التالية للمحفظة يجب أن تكون متاحة في عملية تسجيل المستخدم؟ يتطلب ذلك تمكين خيار المحفظة (انظر أعلاه).

### `extendedprofile_registrationrequired`

**الحقول المطلوبة للمحفظة في التسجيل**

أي من الحقول التالية للمحفظة *مطلوبة* في عملية تسجيل المستخدم؟ يتطلب ذلك تمكين خيار المحفظة وأن يكون الحقل متاحًا أيضًا في نموذج التسجيل (انظر أعلاه).

### `extldap_config`

**تكوين اتصال LDAP**

مصفوفة تحدد المضيف والمنفذ لخادم LDAP.

### `hide_legal_accept_checkbox`

**إخفاء مربع اختيار القبول القانوني في صفحة الشروط والأحكام**

إذا تم تعيينه إلى true، يزيل مربع الاختيار "لقد قرأت وأقبل" في تدفق صفحة الشروط والأحكام.

*افتراضي: `false`*


### `platform_unsubscribe_allowed`

**السماح بالإلغاء الاشتراك من المنصة**

بتمكين هذا الخيار، تسمح لأي مستخدم بحذف حسابه الخاص وبجميع البيانات المتعلقة به نهائيًا من المنصة. هذا إجراء جذري جدًا، لكنه ضروري للبوابات المفتوحة للجمهور حيث يمكن للمستخدمين التسجيل الذاتي. سيظهر مدخل إضافي في ملف المستخدم للإلغاء الاشتراك بعد التأكيد.

*افتراضي: `false`*


### `redirect_after_login`

**إعادة التوجيه بعد تسجيل الدخول (لكل ملف شخصي)**

حدد إعادة التوجيه لكل ملف شخصي بعد تسجيل الدخول باستخدام كائن JSON مثل {"STUDENT":"", "ADMIN":"admin-dashboard"}

*افتراضي:*
```json
{
  "COURSEMANAGER": "courses",
  "STUDENT": "courses",
  "DRH": "",
  "SESSIONADMIN": "admin-dashboard",
  "STUDENT_BOSS": "main/my_space/student.php",
  "INVITEE": "courses",
  "ADMIN": "admin"
}
```

### `required_extra_fields_in_inscription`

**الحقول الإضافية المطلوبة أثناء التسجيل**

مصفوفة من معرفات الحقول الإضافية التي يجب إكمالها أثناء تسجيل المستخدم.

### `required_profile_fields`

**الحقول المطلوبة أثناء التسجيل**

مصفوفة من أسماء حقول الملف الشخصي (email، phone، language، official_code) التي يجب تقديمها أثناء التسجيل.

### `send_inscription_msg_to_inbox`

**إرسال رسالة الترحيب إلى البريد الإلكتروني والصندوق الوارد**

افتراضيًا، تُرسل رسالة الترحيب (مع بيانات الاعتماد) بالبريد الإلكتروني فقط. قم بتمكين هذا الخيار لإرسالها إلى صندوق Chamilo الوارد للمستخدم أيضًا.

*افتراضي: `false`*


### `sessionadmin_autosubscribe`

**الاشتراك التلقائي لمدير الجلسة**

الاشتراك التلقائي لمدير الجلسة - غير متاح بعد

### `student_autosubscribe`

**الاشتراك التلقائي للمتعلم**

الاشتراك التلقائي للمتعلم - غير متاح بعد

### `teacher_autosubscribe`

**الاشتراك التلقائي للمدرس**

الاشتراك التلقائي للمدرس - غير متاح بعد

### `user_hide_never_expire_option`

**إخفاء خيار 'لا ينتهي أبدًا' للمستخدمين**

إزالة الخيار 'لا ينتهي أبدًا' عند إنشاء/تحرير حساب مستخدم.

*افتراضي: `false`*