3.x/ar/admin-guide/platform-settings/registration-settings.md
# إعدادات التسجيل

سياسة التسجيل الذاتي وإعادة التوجيه بعد التسجيل — ما يُطلب من المستخدمين الجدد وأين يصلون.

يمكنك الوصول إلى هذه الإعدادات ضمن **الإدارة > إعدادات التكوين > التسجيل**. تحتوي هذه الفئة على **21 إعدادًا**، مدرجة أدناه مع العنوان والتعليق المُشحن في تجهيزات إعدادات المنصة (`SettingsCurrentFixtures.php`).

> يظهر اسم المتغير في الشيفرة بخط أحادي المسافة. استخدمه عند البرمجة النصية عبر API أو عندما تحتاج إلى تغيير تلك الإعدادات على المستوى العام بتحرير [`config/settings_override.yaml`](https://github.com/chamilo/chamilo-lms/wiki/Configurations#configsettings_overridesyaml).

## الإعدادات

### `allow_double_validation_in_registration`

**التحقق المزدوج لعملية التسجيل**

عرض طلب تأكيد ببساطة على صفحة التسجيل قبل المتابعة بإنشاء المستخدم.

*الافتراضي: `false`*


### `allow_fields_inscription`

**تقييد الحقول المعروضة أثناء التسجيل**

إذا كنت تريد عرض بعض حقول الملف الشخصي المتاحة فقط، يمكنك إكمال المصفوفة هنا بعناصر فرعية 'fields' و 'extra_fields' تحتوي على مصفوفات بقائمة الحقول المراد عرضها.

### `allow_invitation_registration` **v3**

**السماح بالتسجيل عبر روابط دعوة المقرر**

عند التمكين، يمكن للمعلم/المسؤول إرسال رابط دعوة لمرة واحدة من أداة المستخدمين في المقرر يتيح لشخص غير مسجّل الوصول إلى نموذج التسجيل والتسجيل حتى عندما يكون التسجيل الذاتي العام (`allow_registration`) معطّلًا.

*الافتراضي: `false`*

انظر [اشتراك المستخدمين](../../teacher-guide/assessing-learners/subscribing-users.md#inviting-users-by-email) للجانب الموجّه للمعلم من هذه الميزة.

### `allow_lostpassword`

**كلمة المرور المفقودة**

هل يُسمح للمستخدمين بطلب كلمة المرور المفقودة؟

*الافتراضي: `true`*

### `allow_registration`

**التسجيل**

هل يُسمح بالتسجيل كمستخدم جديد؟ هل يمكن للمستخدمين إنشاء حسابات جديدة؟

*الافتراضي: `false`*

### `allow_registration_as_teacher`

**التسجيل كمعلم**

هل يمكن التسجيل كمعلم (مع القدرة على إنشاء المقررات)؟

*الافتراضي: `false`*

### `allow_terms_conditions`

**تمكين الشروط والأحكام**

سيعرض هذا الخيار الشروط والأحكام في نموذج التسجيل للمستخدمين الجدد. يجب تكوينه أولًا في صفحة إدارة البوابة.

*الافتراضي: `false`*


### `drh_autosubscribe`

**الاشتراك التلقائي لمدير الموارد البشرية**

الاشتراك التلقائي لمدير الموارد البشرية - غير متاح بعد

### `extendedprofile_registration`

**حقول المحفظة عند التسجيل**

أي من حقول المحفظة التالية يجب أن تكون متاحة في عملية تسجيل المستخدم؟ يتطلب ذلك تمكين خيار المحفظة (انظر أعلاه).

### `extendedprofile_registrationrequired`

**حقول المحفظة المطلوبة في التسجيل**

أي من حقول المحفظة التالية *مطلوبة* في عملية تسجيل المستخدم؟ يتطلب ذلك تمكين خيار المحفظة وأن يكون الحقل متاحًا أيضًا في نموذج التسجيل (انظر أعلاه).

### `extldap_config`

**تكوين اتصال LDAP**

مصفوفة تحدد المضيف والمنفذ لخادم LDAP.

### `hide_legal_accept_checkbox`

**إخفاء خانة قبول الشروط القانونية في صفحة الشروط والأحكام**

إذا عُيّنت إلى true، تُزال خانة الاختيار «لقد قرأت وأوافق» في تدفق صفحة الشروط والأحكام.

*الافتراضي: `false`*


### `platform_unsubscribe_allowed`

**السماح بإلغاء الاشتراك من المنصة**

بتمكين هذا الخيار، تسمح لأي مستخدم بحذف حسابه نهائيًا وجميع البيانات المرتبطة به من المنصة. هذا إجراء جذري إلى حد كبير، لكنه ضروري للبوابات المفتوحة للجمهور حيث يمكن للمستخدمين التسجيل ذاتيًا. سيظهر إدخال إضافي في ملف المستخدم لإلغاء الاشتراك بعد التأكيد.

*الافتراضي: `false`*


### `redirect_after_login`

**إعادة التوجيه بعد تسجيل الدخول (حسب الملف الشخصي)**

حدد إعادة التوجيه حسب الملف الشخصي بعد تسجيل الدخول باستخدام كائن JSON مثل {"STUDENT":"", "ADMIN":"admin-dashboard"}

*الافتراضي:*
```json
{
  "COURSEMANAGER": "courses",
  "STUDENT": "courses",
  "DRH": "",
  "SESSIONADMIN": "admin-dashboard",
  "STUDENT_BOSS": "main/my_space/student.php",
  "INVITEE": "courses",
  "ADMIN": "admin"
}
```

### `required_extra_fields_in_inscription`

**الحقول الإضافية المطلوبة أثناء التسجيل**

مصفوفة من معرّفات الحقول الإضافية التي يجب إكمالها أثناء تسجيل المستخدم.

### `required_profile_fields`

**الحقول المطلوبة أثناء التسجيل**

مصفوفة من أسماء حقول الملف الشخصي (email, phone, language, official_code) التي يجب توفيرها أثناء التسجيل.

### `send_inscription_msg_to_inbox`

**إرسال رسالة الترحيب إلى البريد الإلكتروني وصندوق الوارد**

افتراضيًا، تُرسل رسالة الترحيب (مع بيانات الاعتماد) عبر البريد الإلكتروني فقط. مكّن هذا الخيار لإرسالها أيضًا إلى صندوق وارد Chamilo الخاص بالمستخدم.

*الافتراضي: `false`*


### `sessionadmin_autosubscribe`

**الاشتراك التلقائي لمسؤول الجلسة**

الاشتراك التلقائي لمسؤول الجلسة - غير متاح بعد

### `student_autosubscribe`

**الاشتراك التلقائي للمتعلم**

الاشتراك التلقائي للمتعلم - غير متاح بعد

### `teacher_autosubscribe`

**الاشتراك التلقائي للمعلم**

الاشتراك التلقائي للمعلم - غير متاح بعد

### `user_hide_never_expire_option`

**إخفاء خيار «لا ينتهي أبدًا» للمستخدمين**

إزالة خيار «لا ينتهي أبدًا» عند إنشاء/تعديل حساب مستخدم.

*القيمة الافتراضية: `false`*